# test-summation_speed

./: CMakeLists.txt  README.md  main.cpp
